patched css issued x overflow hidden was added

--- a/app.css
+++ b/app.css
@@ -1,6 +1,6 @@
-/* html, body {
+html, body {
     overflow-x: hidden;
-  } */
+  }
 
 body {
     background: #fff9fb;
@@ -96,7 +96,7 @@ a{color:#fff9fb}
     display:flex;
     flex-direction:row;
     justify-content: space-between;;
-    padding-right:20px;
+    /* padding-right:20px; */
 }
 .icons p {
     padding-left:10px;
@@ -109,10 +109,13 @@ a{color:#fff9fb}
         #headingGroup h1 {
             font-weight: 100;
             font-size: 2rem;
+
         }  
     }
 @media (max-width:768px){
-    .navbar{
+    .container-fluid{
         background:#fff9fb;
+        padding-left:0;
+        padding-right:0;
     }
 }
